--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     header.hero {
       display: grid;
-      grid-template-columns: minmax(0, 1.3fr) minmax(0, 0.7fr);
+      grid-template-columns: minmax(0, 1fr);
       gap: 24px;
       padding: 28px;
       background: var(--card);
@@ -105,6 +105,12 @@
       gap: 14px;
       position: relative;
       z-index: 1;
+    }
+
+    .metrics-section {
+      display: flex;
+      flex-direction: column;
+      gap: 12px;
     }
 
     .metric {
@@ -405,24 +411,6 @@
         <p class="lead">A focused, filterable view of AI/ML-enabled device approvals since 2016. Use the controls to explore growth, diversification, and the arrival of new companies and product codes.</p>
         <a class="hero-link" href="https://www.fda.gov/medical-devices/software-medical-device-samd/artificial-intelligence-enabled-medical-devices" target="_blank" rel="noreferrer"><span>-></span> Source: FDA AI/ML-Enabled Medical Devices list</a>
       </div>
-      <div class="metrics">
-        <div class="metric">
-          <div class="value" id="metric-approvals">--</div>
-          <div class="label">Approvals (range)</div>
-        </div>
-        <div class="metric">
-          <div class="value" id="metric-companies">--</div>
-          <div class="label">Unique Companies</div>
-        </div>
-        <div class="metric">
-          <div class="value" id="metric-panels">--</div>
-          <div class="label">Panels Represented</div>
-        </div>
-        <div class="metric">
-          <div class="value" id="metric-codes">--</div>
-          <div class="label">Product Codes</div>
-        </div>
-      </div>
     </header>
 
     <section class="controls fade-up" style="animation-delay: 140ms;">
@@ -454,6 +442,28 @@
           <div class="control-row">
             <button class="reset" id="reset-filters">Reset filters</button>
           </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="metrics-section fade-up" style="animation-delay: 200ms;">
+      <p class="eyebrow">Filtered snapshot</p>
+      <div class="metrics">
+        <div class="metric">
+          <div class="value" id="metric-approvals">--</div>
+          <div class="label">Approvals (range)</div>
+        </div>
+        <div class="metric">
+          <div class="value" id="metric-companies">--</div>
+          <div class="label">Unique Companies</div>
+        </div>
+        <div class="metric">
+          <div class="value" id="metric-panels">--</div>
+          <div class="label">Panels Represented</div>
+        </div>
+        <div class="metric">
+          <div class="value" id="metric-codes">--</div>
+          <div class="label">Product Codes</div>
         </div>
       </div>
     </section>
