Update main title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>FDA AI/ML-Enabled Medical Devices Explorer</title>
+  <title>FDA AI/ML-Enabled Medical Devices</title>
   <style>
     :root {
       --bg: #f3eee4;
@@ -406,8 +406,8 @@
   <div class="page">
     <header class="hero fade-up" style="animation-delay: 60ms;">
       <div>
-        <p class="eyebrow">FDA AI/ML-Enabled Medical Devices</p>
-        <h1>Approval Velocity, Panel Mix, and New Entrants</h1>
+        <p class="eyebrow">Approval velocity, panel mix, and new entrants</p>
+        <h1>FDA AI/ML-Enabled Medical Devices</h1>
         <p class="lead">A focused, filterable view of AI/ML-enabled device approvals since 2016. Use the controls to explore growth, diversification, and the arrival of new companies and product codes.</p>
         <a class="hero-link" href="https://www.fda.gov/medical-devices/software-medical-device-samd/artificial-intelligence-enabled-medical-devices" target="_blank" rel="noreferrer"><span>-></span> Source: FDA AI/ML-Enabled Medical Devices list</a>
       </div>
